--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -145,6 +145,8 @@
                 size: 10Gi
                 class: standard
           zalando:
+            initialSetup:
+              enabled: false
             metabase:
               instances: 1
               loadBalancer: true
