--- a/charts/dataplane/templates/registry/deployment.yml
+++ b/charts/dataplane/templates/registry/deployment.yml
@@ -1,5 +1,3 @@
-{{- $connectSvc := printf "%s-%s" (include "dataplane.strimzi.connect.fullname" .) "connect-api" }}
-{{- $connectPort := 8083 }}
 {{- $svcName :=  include "dataplane.registry.fullname" . }}
 {{- $svcPort := .Values.registry.service.port -}}
 {{- $bootstrapHost := include "dataplane.strimzi.kafka.bootstrap" . }}
@@ -32,7 +30,7 @@ spec:
       securityContext:
         {{- toYaml .Values.registry.podSecurityContext | nindent 8 }}
       containers:
-        - name: registry-web
+        - name: registry
           securityContext:
             {{- toYaml .Values.registry.securityContext | nindent 12 }}
           image: "{{ .Values.registry.image.repository }}:{{ .Values.registry.image.tag | default .Chart.AppVersion }}"
@@ -61,46 +59,8 @@ spec:
           {{- with .Values.registry.podEnvironmentVars }}
             {{- toYaml . | nindent 12 }}
           {{- end }}
-        - name: connector-restart
-          securityContext:
-            {{- toYaml .Values.registry.securityContext | nindent 12 }}
-          image: {{ .Values.registry.utilImage.repository }}:{{ .Values.registry.utilImage.tag }}
-          imagePullPolicy: {{ .Values.registry.utilImage.pullPolicy }}
-          resources:
-            requests:
-              cpu: 500m
-              memory: 200Mi
-            limits:
-              cpu: 500m
-              memory: 200Mi
-          command:
-            - "sh"
-            - "-c"
-            - >-
-              until curl -s http://{{ $svcName }}:{{ $svcPort }}/ -o /dev/null; do
-                echo waiting for registry service;
-                sleep 10;
-              done;
-              echo registry service up;
-              until curl -s http://{{ $connectSvc }}:{{ $connectPort }}/ -o /dev/null; do
-                echo waiting for connect api service;
-                sleep 10;
-              done;
-              echo connect api service up;
-              sleep 10;
-              echo restarting connectors;
-              curl -s http://{{ $connectSvc }}:{{ $connectPort }}/connectors | jq '.[]' -r |
-                xargs -I{} curl -s -XPOST http://{{ $connectSvc }}:{{ $connectPort }}/connectors/{}/restart;
-              echo connectors restarted;
-              echo restarting tasks;
-              curl -s http://{{ $connectSvc }}:{{ $connectPort }}/connectors | jq '.[]' -r |
-                xargs -I{} bash -c "curl -s http://{{ $connectSvc }}:{{ $connectPort }}/connectors/{}/tasks |
-                   jq 'map(.id.task) | .[]' -r |
-                   xargs -I[] curl -s -XPOST http://{{ $connectSvc }}:{{ $connectPort }}/connectors/{}/tasks/[]/restart"
-              echo tasks restarted;
-              tail -f /dev/null;
       initContainers:
-        - name: registry-init
+        - name: -init
           image: {{ .Values.registry.utilImage.repository }}:{{ .Values.registry.utilImage.tag }}
           imagePullPolicy: {{ .Values.registry.utilImage.pullPolicy }}
           command:
