Fix job manifest syntax

--- a/charts/dataplane/templates/registry/deployment.yml
+++ b/charts/dataplane/templates/registry/deployment.yml
@@ -60,7 +60,7 @@ spec:
             {{- toYaml . | nindent 12 }}
           {{- end }}
       initContainers:
-        - name: -init
+        - name: init
           image: {{ .Values.registry.utilImage.repository }}:{{ .Values.registry.utilImage.tag }}
           imagePullPolicy: {{ .Values.registry.utilImage.pullPolicy }}
           command:
