Remove liveness probe from metabase deployment

--- a/charts/dataplane/templates/registry/job.yml
+++ b/charts/dataplane/templates/registry/job.yml
@@ -6,7 +6,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: {{ $svcName }}
+  name: {{ $svcName }}-connector-restart
 spec:
   template:
     spec:
