--- a/charts/dataplane/templates/registry/deployment.yml
+++ b/charts/dataplane/templates/registry/deployment.yml
@@ -30,7 +30,7 @@ spec:
       securityContext:
         {{- toYaml .Values.registry.podSecurityContext | nindent 8 }}
       containers:
-        - name: {{ .Chart.Name }}
+        - name: registry
           securityContext:
             {{- toYaml .Values.registry.securityContext | nindent 12 }}
           image: "{{ .Values.registry.image.repository }}:{{ .Values.registry.image.tag | default .Chart.AppVersion }}"
@@ -43,10 +43,12 @@ spec:
             httpGet:
               path: /
               port: http
+            initialDelaySeconds: {{ .Values.registry.probeDelay }}
           readinessProbe:
             httpGet:
               path: /
               port: http
+            initialDelaySeconds: {{ .Values.registry.probeDelay }}
           resources:
             {{- toYaml .Values.registry.resources | nindent 12 }}
           env:
@@ -58,13 +60,19 @@ spec:
             {{- toYaml . | nindent 12 }}
           {{- end }}
       initContainers:
-        - name: registry-init
-          image: {{ .Values.busybox.image.repository }}:{{ .Values.busybox.image.tag }}
-          imagePullPolicy: {{ .Values.busybox.image.pullPolicy }}
+        - name: init
+          image: {{ .Values.registry.utilImage.repository }}:{{ .Values.registry.utilImage.tag }}
+          imagePullPolicy: {{ .Values.registry.utilImage.pullPolicy }}
           command:
-            - "sh"
+            - sh
             - "-c"
-            - "until nc -w 1 -vz {{ $bootstrapHost }} {{ $bootstrapPort }}; do echo waiting for kafka broker ; sleep 10 ; done ;"
+            - >-
+              echo wait for kafka broker;
+              until nc -w 1 -vz {{ $bootstrapHost }} {{ $bootstrapPort }} 2>/dev/null; do
+                echo waiting for kafka broker;
+                sleep 10;
+              done;
+              echo kafka broker up;
       {{- with .Values.registry.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
