--- a/charts/dataplane/values.yaml
+++ b/charts/dataplane/values.yaml
@@ -29,7 +29,11 @@ strimzi:
       class: ""
 
   connect:
-    image: nephelaiio/dataplane-connect:0.0.4
+
+    image:
+      repository: nephelaiio/dataplane-connect
+      latest: 0.0.5
+
     replicas: 3
     config:
       group.id: connect-cluster
@@ -76,10 +80,28 @@ metabase:
 
   replicaCount: 2
 
+  initialSetup:
+    enabled: true
+
+    image:
+      repository: josesolisrosales/metabase-init
+      pullPolicy: Always
+      tag: "1.1.0"
+
+    retries: 6
+    backoffSeconds: 2
+
+    user:
+      firstName: John
+      lastName: Doe
+      email: jdoe@test.test
+
+    securityContext: {}
+
   image:
     repository: metabase/metabase
     pullPolicy: IfNotPresent
-    tag: ""
+    tag: "v0.44.2"
 
   ingress:
     enabled: false
@@ -106,6 +128,11 @@ metabase:
 
 registry:
 
+  utilImage:
+    repository: nephelaiio/dataplane-util
+    pullPolicy: IfNotPresent
+    tag: 0.0.5
+
   image:
     repository: confluentinc/cp-schema-registry
     pullPolicy: IfNotPresent
@@ -114,6 +141,8 @@ registry:
   service:
     type: ClusterIP
     port: 8081
+
+  probeDelay: 10
 
   podEnvironmentVars:
     - name: "MB_REDIRECT_ALL_REQUESTS_TO_HTTPS"
@@ -132,10 +161,3 @@ registry:
   tolerations: []
 
   affinity: {}
-
-busybox:
-
-  image:
-    repository: busybox
-    pullPolicy: IfNotPresent
-    tag: "1.35.0"
