--- a/charts/dataplane/templates/registry/job.yml
+++ b/charts/dataplane/templates/registry/job.yml
@@ -7,6 +7,10 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: {{ $svcName }}-connector-restart
+  annotations:
+    helm.sh/hook: post-install,post-upgrade
+    helm.sh/hook-weight: "-10"
+    helm.sh/hook-delete-policy: before-hook-creation
 spec:
   template:
     spec:
