--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -115,53 +115,7 @@
         timeout: 20m
         kubeconfig: "{{ k8s_kubeconfig }}"
         binary_path: "{{ k8s_helm_bin }}"
-        values:
-          registry:
-            utilImage:
-              repository: "{{ kind_registry_hostname }}:5000/nephelaiio/dataplane-util"
-              tag: latest
-          cdc:
-            postgres:
-              - hostname: "{{ dataplane_pagila_team }}-{{ dataplane_pagila_db }}"
-                port: 5432
-                servername: pagila
-                dbname: db
-          strimzi:
-            connect:
-              image:
-                repository: "{{ kind_registry_hostname }}:5000/nephelaiio/dataplane-connect"
-                tag: latest
-              secret: "{{ dataplane_pagila_user }}-{{ dataplane_pagila_team }}-{{ dataplane_pagila_db }}"
-            kafka:
-              storage:
-                size: 10Gi
-                class: standard
-              config:
-                offsets.topic.replication.factor: 1
-                transaction.state.log.replication.factor: 1
-                transaction.state.log.min.isr: 1
-            zookeeper:
-              storage:
-                size: 10Gi
-                class: standard
-          zalando:
-            initialSetup:
-              enabled: false
-            metabase:
-              instances: 1
-              loadBalancer: true
-              allowedSourceRanges: 0.0.0.0/0
-            warehouse:
-              instances: 1
-              loadBalancer: true
-              allowedSourceRanges: 0.0.0.0/0
-          metabase:
-            ingress:
-              enabled: true
-              className: nginx-private
-              hostName: "{{ dataplane_metabase_hostname }}"
-              annotations:
-                cert-manager.io/cluster-issuer: "{{ k8s_certmanager_issuer_name }}"
+        values: "{{ dataplane_chart_values }}"
 
     - name: wait for database cluster startup
       ansible.builtin.fail:
