--- a/charts/dataplane/templates/metabase/hook.yaml
+++ b/charts/dataplane/templates/metabase/hook.yaml
@@ -1,5 +1,5 @@
 {{- $svcName := include "dataplane.metabase.fullname" . }}
-{{- if .Values.metabase.initialSetup.enabled }}
+{{- if .Values.metabase.init.enabled }}
 ---
 apiVersion: batch/v1
 kind: Job
@@ -16,29 +16,24 @@ spec:
       containers:
         - name: metabase-setup
           securityContext:
-            {{- toYaml .Values.metabase.initialSetup.securityContext | nindent 12 }}
-          image: "{{ .Values.metabase.initialSetup.image.repository }}:{{ .Values.metabase.initialSetup.image.tag }}"
-          imagePullPolicy: {{ .Values.metabase.initialSetup.image.pullPolicy }}
+            {{- toYaml .Values.metabase.init.securityContext | nindent 12 }}
+          image: "{{ .Values.metabase.init.image.repository }}:{{ .Values.metabase.init.image.tag }}"
+          imagePullPolicy: {{ .Values.metabase.init.image.pullPolicy }}
           resources:
-            requests:
-              cpu: 500m
-              memory: 200Mi
-            limits:
-              cpu: 500m
-              memory: 200Mi
+            {{- toYaml .Values.metabase.init.resources | nindent 12 }}
           env:
             - name: "INIT_RETRIES"
-              value: "{{ .Values.metabase.initialSetup.retries }}"
+              value: "{{ .Values.metabase.init.retries }}"
             - name: "INIT_BACKOFF_SECONDS"
-              value: "{{ .Values.metabase.initialSetup.backoffSeconds }}"
+              value: "{{ .Values.metabase.init.backoffSeconds }}"
             - name: "MB_SITE_URL"
               value: "https://{{ .Values.metabase.ingress.hostName }}"
             - name: "MB_ADMIN_FIRSTNAME"
-              value: "{{ .Values.metabase.initialSetup.user.firstName }}"
+              value: "{{ .Values.metabase.init.user.firstName }}"
             - name: "MB_ADMIN_LASTNAME"
-              value: "{{ .Values.metabase.initialSetup.user.lastName }}"
+              value: "{{ .Values.metabase.init.user.lastName }}"
             - name: "MB_ADMIN_EMAIL"
-              value: "{{ .Values.metabase.initialSetup.user.email }}"
+              value: "{{ .Values.metabase.init.user.email }}"
             - name: "MB_ADMIN_PASSWORD"
               valueFrom:
                 secretKeyRef:
