--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -58,6 +58,9 @@ jobs:
       - name: install helm
         uses: azure/setup-helm@v3
 
+      - name: install helm diff plugin
+        run: helm plugin install https://github.com/databus23/helm-diff
+
       - name: set up python 3
         uses: actions/setup-python@v2
         with:
